個人情報未収集掲示

--- a/works/experience/success.html
+++ b/works/experience/success.html
@@ -11,6 +11,8 @@
         <h1>よくできました！</h1>
         <p>個人情報を入力せず、詐欺を回避しました。このように、疑わしいサイトでは情報を入力しないことが重要です。</p>
         <p>引き続き、注意を払い、安全なインターネットの利用を心がけましょう。</p>
+        <p>※当WEBページでは、実際の個人情報は一切取得・送信されません。</p>
+        <p><a href="../index.html">トップページに戻る</a></p>
     </div>
 </body>
 </html>
