--- a/works/experience/warning.html
+++ b/works/experience/warning.html
@@ -11,6 +11,8 @@
         <h1>警告！</h1>
         <p>何かしらの情報を入力してしまいました。これにより、個人情報が悪用される可能性があります。</p>
         <p>フィッシング詐欺やワンクリック詐欺では、こうした情報が詐欺の手段として利用されることがあります。今後、疑わしいサイトでは情報を入力しないように注意してください。</p>
+        <p>※当WEBページでは、実際の個人情報は一切取得・送信されません。</p>
+        <p><a href="../index.html">トップページに戻る</a></p>
     </div>
 </body>
 </html>
