中尾くんプロフィール追加

--- a/members/members.html
+++ b/members/members.html
@@ -84,12 +84,12 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../img/profIcon.png" class="card-img-top rounded-circle p-3" />
+              <img src="../img/photo_20241107-080545.png" class="card-img-top rounded-circle p-3" />
               <div class="card-body">
                 <h5 calss="card-title">Kou.N
                 </h5>
-                <p class="card-text">Program:</p>
-                <p class="card-text">Role:</p>
+                <p class="card-text">Program:IB</p>
+                <p class="card-text">Role:ポスター・掲示物作成</p>
               </div>
             </div>
           </div>
