--- a/works/quiz/index.html
+++ b/works/quiz/index.html
@@ -1,20 +1,87 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styel.css" />
     <title>フィッシング詐欺対策クイズ</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="quiz-container">
-        <h1>フィッシング詐欺対策クイズ</h1>
-        <div id="question-container">
-            <!-- 問題がここに表示されます -->
-        </div>
-        <button id="next-button">次へ</button>
-        <p id="score"></p>
+  </head>
+  <body>
+    <div id="loading">
+      <div id="loadingText"></div>
     </div>
-    <script src="script.js"></script>
-</body>
+
+    <div id="hamburger">
+      <div class="icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+
+    <nav id="navigation">
+      <div id="navList">
+        <ul>
+          <li><a href="../index.html">TOP</a></li>
+          <li><a href="../works/index.html">WORKS</a></li>
+          <li><a href="../about/index.html">ABOUT</a></li>
+          <li><a href="../members/members.html">MEMBERS</a></li>
+          <li><a href="#">CONTACT US</a></li>
+          <li>
+            <a href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0">ACTIVITY LOG</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div id="particles-js"></div>
+
+    <div class="container">
+      <div id="title">
+        <h1>フィッシング詐欺対策クイズ</h1>
+      </div>
+
+      <div class="background">
+        <div class="innerContents">
+          <h2>クイズを開始しましょう！</h2>
+          <div class="quizContent">
+            <p>以下の質問に答えて、フィッシング詐欺に対する知識をテストしましょう。</p>
+            <form id="quizForm">
+              <div class="question">
+                <p>1. フィッシング詐欺とはどのような手口ですか？</p>
+                <label>
+                  <input type="radio" name="q1" value="a" /> 正当な企業や団体を装って個人情報を求める
+                </label><br />
+                <label>
+                  <input type="radio" name="q1" value="b" /> 無料ソフトウェアを配布する詐欺
+                </label><br />
+                <label>
+                  <input type="radio" name="q1" value="c" /> 薄利多売の商品の販売
+                </label>
+              </div>
+
+              <div class="question">
+                <p>2. フィッシング詐欺のメールを受け取った場合、どのように対処すべきですか？</p>
+                <label>
+                  <input type="radio" name="q2" value="a" /> メール内のリンクをクリックする
+                </label><br />
+                <label>
+                  <input type="radio" name="q2" value="b" /> 送信者のメールアドレスを確認し、疑わしければ削除する
+                </label><br />
+                <label>
+                  <input type="radio" name="q2" value="c" /> メールの内容に返信して確認する
+                </label>
+              </div>
+
+              <button type="submit" id="submitBtn">送信</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.1.js" crossorigin="anonymous"></script>
+    <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script src="../scriptFile.js"></script>
+  </body>
 </html>
