デザインの変更

--- a/works/quiz/index.html
+++ b/works/quiz/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div id="quiz-container">
-        <h1>フィッシング詐欺対策クイズ</h1>
-        <div id="question-container">
-            <!-- 問題がここに表示されます -->
+        <div id="quiz-content">
+            <h1>フィッシング詐欺対策クイズ</h1>
+            <div id="question-container">
+                <!-- 問題がここに表示されます -->
+            </div>
+            <button id="next-button">次へ</button>
+            <p id="score"></p>
         </div>
-        <button id="next-button">次へ</button>
-        <p id="score"></p>
     </div>
     <script src="script.js"></script>
 </body>
