トップページナビゲーション変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="loadingText"></div>
     </div>
 
-    <div id="hamburger">
+    <!-- <div id="hamburger">
       <div class="icon">
         <span></span>
         <span></span>
@@ -36,13 +36,28 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
     <div id="particles-js"></div>
     <div class="contents">
       <div id="title">
         <h1>2024 FujitaPoject</h1>
       </div>
+      <nav class="navigationTop">
+        <ul>
+          <li><a href="#">TOP</a></li>
+          <li><a href="works/index.html">WORKS</a></li>
+          <li><a href="about/index.html">ABOUT</a></li>
+          <li><a href="members/members.html">MEMBERS</a></li>
+          <li><a href="#">CONTACT US</a></li>
+          <li>
+            <a
+              href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
+              >ACTIVITY LOG</a
+            >
+          </li>
+        </ul>
+      </nav>
       <div class="logoArea">
         <img class="slideIn" src="img/2f8b2654-b613-4408-9b5d-f47c52e36c3f-removebg-preview.ico" />
       </div>
