コンテンツの編集

--- a/about/index.html
+++ b/about/index.html
@@ -1,83 +1,90 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" tyep="css" href="../styel.css" />
-    <link rel="icon" href="../img/favicon.ico" />
-    <title>2024FujitaProject</title>
-  </head>
 
-  <body>
-    <div id="loading">
-      <div id="loadingText"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" tyep="css" href="../styel.css" />
+  <link rel="icon" href="../img/favicon.ico" />
+  <title>2024FujitaProject</title>
+</head>
+
+<body>
+  <div id="loading">
+    <div id="loadingText"></div>
+  </div>
+
+  <div id="hamburger">
+    <div class="icon">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
+  </div>
 
-    <div id="hamburger">
-      <div class="icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+  <nav id="navigation">
+    <div id="navList">
+      <ul>
+        <li><a href="../index.html">TOP</a></li>
+        <li><a href="../works/index.html">WORKS</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="../members/members.html">MEMBERS</a></li>
+        <li><a href="#">CONTACT US</a></li>
+        <li>
+          <a href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0">ACTIVITY LOG</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-    <nav id="navigation">
-      <div id="navList">
-        <ul>
-          <li><a href="../index.html">TOP</a></li>
-          <li><a href="../works/index.html">WORKS</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="../members/members.html">MEMBERS</a></li>
-          <li><a href="#">CONTACT US</a></li>
-          <li>
-            <a
-              href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
-              >ACTIVITY LOG</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div id="particles-js"></div>
-    <div class="contents">
-      <div id="title">
-        <h1>ABOUT</h1>
-      </div>
-      <div class="background">
-        <div class="innerContents">
-          <div class="title"><h1>セーフティネット〜フィッシング詐欺体験〜</h1></div>
-          <h2>目的と背景</h2>
-          <p>
-            私たちは、セキュリティの中でフィッシングの対策を考えるというテーマのもと活動しています。
-            本プロジェクトのゴールを考えるにあたって、セキュリティの現状についてメンバーと議論した結果、
-            フィッシング詐欺に対する関心が高まり、フィッシング詐欺に関連するコンテンツを作るという方向性に
-            なりました。<br>そのため、まず学部の生徒を対象としたアンケート調査を実施し、対策や具体的な事例に
-            ついての間接的な理解を深めることにしました。アンケートの結果から明らかになった「大学生の
-            フィッシング詐欺に対する危機感の欠如」という問題を解決するために、体験型詐欺サイトを実現します。
-            実現に向けて、既存の体験コンテンツを調査・分析し、独自のコンテンツを作ることを目標とします。
-          </p>
-          <h2>アンケートをもとに企画立案</h2>
-          <p>
-            大学生を対象にする企画です [実例を用いたフィッシング詐欺の危険性教育]
-            [体験型フィッシング詐欺シミュレーション]
-            大学生のフィッシング詐欺に対する認識と危機意識のギャップを埋めるため、アンケート結果から得られた
-            以下の問題点に焦点を当てています<br>
-            フィッシング詐欺の認知度（大学生83.3%) は一般(80%)
-            より高いにもかかわらず、<br> 実際に不安を感じている割合（大学生62.2%)
-            は一般（ 73.9%) より低い。
-          </p>
-          <div class="pie01"><span>80%</span></div>
+  <div id="particles-js"></div>
+  <div class="contents">
+    <div id="title">
+      <h1>ABOUT</h1>
+    </div>
+    <div class="background">
+      <div class="innerContents">
+        <div class="title">
+          <h1>セーフティネット〜フィッシング詐欺体験〜</h1>
+        </div>
+        <h2>目的と背景</h2>
+        <p>
+          私たちは、セキュリティの中でフィッシングの対策を考えるというテーマのもと活動しています。
+          本プロジェクトのゴールを考えるにあたって、セキュリティの現状についてメンバーと議論した結果、
+          フィッシング詐欺に対する関心が高まり、フィッシング詐欺に関連するコンテンツを作るという方向性に
+          なりました。<br>そのため、まず学部の生徒を対象としたアンケート調査を実施し、対策や具体的な事例に
+          ついての間接的な理解を深めることにしました。アンケートの結果から明らかになった「大学生の
+          フィッシング詐欺に対する危機感の欠如」という問題を解決するために、体験型詐欺サイトを実現します。
+          実現に向けて、既存の体験コンテンツを調査・分析し、独自のコンテンツを作ることを目標とします。
+        </p>
+        <h2>アンケートをもとに企画立案</h2>
+        <p>
+          大学生を対象にする企画です [実例を用いたフィッシング詐欺の危険性教育]
+          [体験型フィッシング詐欺シミュレーション]
+          大学生のフィッシング詐欺に対する認識と危機意識のギャップを埋めるため、アンケート結果から得られた
+          以下の問題点に焦点を当てています<br>
+          フィッシング詐欺の認知度（大学生83.3%) は一般(80%)
+          より高いにもかかわらず、<br> 実際に不安を感じている割合（大学生62.2%)
+          は一般（ 73.9%) より低い。
+        </p>
+        <h3>フィッシング詐欺という言葉を知っていますか？</h3>
+        <div class="plotArea">
+          <div class="pie01"><span>一般:80%</span></div>
+          <div class="pie02"><span>大学生:83%</span></div>
+        </div>
+        <h3>フィッシング詐欺についてどれぐらい心配していますか？</h3>
+        <div class="plotArea">
+          <div class="pie03"><span>一般:73%</span></div>
+          <div class="pie04"><span>大学生:62%</span></div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.js"
-      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="../scriptFile.js"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+  <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="../scriptFile.js"></script>
+</body>
+
 </html>
