--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
       </nav>
       <div class="logoArea">
-        <img class="slideIn" src="img/2f8b2654-b613-4408-9b5d-f47c52e36c3f-removebg-preview.ico" />
+        <img class="slideIn" src="img/ロゴ.png" />
       </div>
       <div class="titleArea">
         <h1>FUJITA PROJECT</h1>
