--- a/works/index.html
+++ b/works/index.html
@@ -48,7 +48,16 @@
           <div class="indexMenu">
             <ul>
               <li>
-                <a href="Contents.html">フィッシング詐欺体験</a>
+                <a href="https://fakeform.netlify.app/">フィッシング詐欺対策アンケート</a>
+                <p>フィッシング詐欺に騙された・騙されそうになったことはありますか？アンケートを作成したので是非回答してみてください。</p>
+              </li>
+              <li>
+                <a href="experience/index.html">ワンクリック詐欺体験</a>
+                <p>ワンクリック詐欺の体験ができるページです。ワンクリック詐欺の手口を知ることができます。</p>
+              </li>
+              <li>
+                <a href="quiz/index.html">フィッシング詐欺クイズ</a>
+                <p>あなたのフィッシング詐欺対策レベルを測定するクイズです。</p>
               </li>
             </ul>
           </div>
