クイズの改良、コンテンツの追加

--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
         <li><a href="../works/index.html">WORKS</a></li>
         <li><a href="#">ABOUT</a></li>
         <li><a href="../members/members.html">MEMBERS</a></li>
-        <li><a href="#">CONTACT US</a></li>
+        <!-- <li><a href="../contents/contents.html">CONTENTS</a></li> -->
         <li>
           <a href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0">ACTIVITY LOG</a>
         </li>
@@ -76,6 +76,50 @@
           <div class="pie03"><span>一般:73%</span></div>
           <div class="pie04"><span>大学生:62%</span></div>
         </div>
+        <p>
+          このような結果から、大学生のフィッシング詐欺に対する危機感の欠如が明らかになりました。
+          この問題を解決するために、体験型詐欺サイトを実現します。実現に向けて、既存の体験コンテンツを
+          調査・分析し、独自のコンテンツを作ることを目標とします。
+        </p>
+        <div class="title">
+          <h1>なぜセキュリティリスクを知る必要があるのか？</h1>
+        </div>
+        <p>人間は知らないことに対処することが困難です。このため、正しく知識を蓄えることで多くの人が様々なセキュリティリスクに備える事ができます。</p>
+        <p>攻撃手段や手法を知り、正しく恐れ、正しく備えることで、セキュリティリスクに対する対策を行うことができます。</p>
+        <h2>攻撃者の目的</h2>
+        <p>攻撃者は、個人情報や金銭を盗むことが目的です。主に現金化できる仮想通貨や機密情報（クレジットカード情報など）、サーバやPCの権限などが狙われます。</p>
+        <p>
+          そもそもフィッシング詐欺とは、実際の組織や企業を装い、メールなどを通じて個人情報を盗むこと。サービス提供元を装ったメールやSMSのURLをクリックすると、偽サイトに誘導され、誘導先に個人情報を入力すると情報がぬすまれてしまう。
+        </p>
+        <div style="text-align: center;">
+          <img src="../img/詐欺画像/Screenshot_20241129_204535_Messages.jpg" height="800">
+        </div>
+        <h2>アドレスバーで判断する方法</h2>
+        <p>かつては、正規でないサイトの判別手段としてアドレスバーのURLを確認することが有効でしたが、現在では偽装が進化し、URLだけでは判断が難しくなっています。</p>
+        <p>例えば、電子証明書を利用するケースや、スマートフォンの表示領域の狭さを利用して、URLを隠す手法が使われています。加えて、ホモグリフ攻撃と呼ばれる見た目が同じような文字を利用するケースも見られます。
+        </p>
+        <div style="text-align: center;">
+          <img src="../img/詐欺画像/images/アドレス_03.png">
+          <img src="../img/詐欺画像/スクリーンショット 2024-11-29 204912.jpg" width="800" height="auto">
+        </div>
+        <h2>巧妙なマルスパム</h2>
+        <p>マルスパムは、スパムメールによるマルウェア感染を指します。スパムメールには、添付ファイルやリンクをクリックすることで、マルウェアが感染するリスクがあります。</p>
+        <p>中でも、Emotetと呼ばれるマルスパムが流行し、このマルスパムは過去にやり取りのある差出人と件名を使うため、正規のメールへの返信を装うことで、マルスパムの添付ファイルを実行させやすくしている。</p>
+        <h2>被害を軽減する方法</h2>
+        <ul>
+          <li>セキュリティ対策ソフトを利用して、正しく運用する</li>
+          <ul>
+            <li>ウイルス対策定義データを常に最新の状態を維持する。</li>
+          </ul>
+          <li>OSやソフトウェアに対しセキュリティパッチを適用する</li>
+          <ul>
+            <li>使用しているソフトウェアが、最新のバージョンであるかを確認する。</li>
+          </ul>
+          <li>脅威に対して情報収集を欠かさない</li>
+          <ul>
+            <li>マルウェアなどの脅威は日進月歩で進化します。このため、どのような攻撃手法が流行して言うのかを把握しておくと良いでしょう。</li>
+          </ul>
+        </ul>
       </div>
     </div>
   </div>
