--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="works/index.html">WORKS</a></li>
           <li><a href="about/index.html">ABOUT</a></li>
           <li><a href="members/members.html">MEMBERS</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <!-- <li><a href="contents/contents.html">CONTENTS</a></li> -->
           <li>
             <a
               href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
