--- a/members/members.html
+++ b/members/members.html
@@ -34,7 +34,7 @@
           <li><a href="../works/index.html">WORKS</a></li>
           <li><a href="../about/index.html">ABOUT</a></li>
           <li><a href="#">MEMBERS</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <!-- <li><a href="../contents/contents.html">CONTENTS</a></li> -->
           <li>
             <a
               href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
@@ -64,7 +64,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../img/プロフィール写真.jpg" class="card-img-top rounded-circle p-3" />
+              <img src="../img/profphoto.jpg" class="card-img-top rounded-circle p-3" />
               <div class="card-body">
                 <h5 calss="card-title">Shinnosuke.A</h5>
                 <p class="card-text">Program:MC</p>
@@ -119,7 +119,7 @@
               <div class="card-body">
                 <h5 calss="card-title">Takumi.M</h5>
                 <p class="card-text">Program:DS</p>
-                <p class="card-text">Role:</p>
+                <p class="card-text">Role:プロジェクト連絡会議</p>
               </div>
             </div>
           </div>
