--- a/works/index.html
+++ b/works/index.html
@@ -26,7 +26,7 @@
           <li><a href="">WORKS</a></li>
           <li><a href="../about/index.html">ABOUT</a></li>
           <li><a href="../members/members.html">MEMBERS</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <!-- <li><a href="../contents/contents.html">CONTENTS</a></li> -->
           <li>
             <a
               href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
@@ -46,9 +46,9 @@
         <div class="innerContents">
           <h2>Contents</h2>
           <div class="indexMenu">
-            <ul>
+            <ol>
               <li>
-                <a href="https://fakeform.netlify.app/">フィッシング詐欺対策アンケート</a>
+                <a href="https://goegle.netlify.app/">フィッシング詐欺対策アンケート</a>
                 <p>フィッシング詐欺に騙された・騙されそうになったことはありますか？アンケートを作成したので是非回答してみてください。</p>
               </li>
               <li>
@@ -59,7 +59,11 @@
                 <a href="quiz/index.html">フィッシング詐欺クイズ</a>
                 <p>あなたのフィッシング詐欺対策レベルを測定するクイズです。</p>
               </li>
-            </ul>
+              <li>
+                <a href="mailcheck/index.html">フィッシング詐欺体験コンテンツ</a>
+                <p>このプロジェクトでのコンテンツを基に、フィッシング詐欺コンテンツの体験を基に、簡単なクイズを問いてみてください。</p>
+              </li>
+            </ol>
           </div>
           <h2>Documents</h2>
           <div class="indexMenu">
