--- a/works/experience/index.html
+++ b/works/experience/index.html
@@ -9,12 +9,14 @@
   <body>
     <div class="background">
       <div class="container">
+        <img src="../../img/close.png" id="cancel" class="d-none">
         <h1>登録完了</h1>
         <p>ご登録が完了しました。<br>登録費用: <strong id="price">10,000円</strong></p>
         <p>会員番号: <span id="member-id"></span></p>
         <p>登録日時: <span id="register-date"></span></p>
         <p>支払い期限: <span id="countdown"></span></p>
         <button id="next-btn">次へ</button>
+        <img src="../../img/close.png" id="cancel" class="d-none">
       </div>
     </div>
     <script src="script.js"></script>
