--- a/works/quiz/index.html
+++ b/works/quiz/index.html
@@ -15,6 +15,7 @@
             </div>
             <button id="next-button">次へ</button>
             <p id="score"></p>
+            <p id="result"></p>
         </div>
     </div>
     <script src="script.js"></script>
