コンテンツをローカルからnetlifyへ変更

--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@
         <h2>攻撃者の目的</h2>
         <p>攻撃者は、個人情報や金銭を盗むことが目的です。主に現金化できる仮想通貨や機密情報（クレジットカード情報など）、サーバやPCの権限などが狙われます。</p>
         <p>
-          そもそもフィッシング詐欺とは、実際の組織や企業を装い、メールなどを通じて個人情報を盗むこと。サービス提供元を装ったメールやSMSのURLをクリックすると、偽サイトに誘導され、誘導先に個人情報を入力すると情報がぬすまれてしまう。
+          そもそもフィッシング詐欺とは、実際の組織や企業を装い、メールなどを通じて個人情報を盗むこと。サービス提供元を装ったメールやSMSのURLをクリックすると、偽サイトに誘導され、誘導先に個人情報を入力すると情報が盗まれてしまう。
         </p>
         <div style="text-align: center;">
           <img src="../img/詐欺画像/Screenshot_20241129_204535_Messages.jpg" height="800">
