--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" tyep="css" href="styel.css" />
-    <link rel="icon" href="img/favicon.ico" />
-    <title>2024FujitaProject</title>
-  </head>
 
-  <body>
-    <div id="loading">
-      <div id="loadingText"></div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" tyep="css" href="styel.css" />
+  <link rel="icon" href="img/favicon.ico" />
+  <title>2024FujitaProject</title>
+</head>
 
-    <!-- <div id="hamburger">
+<body>
+  <div id="loading">
+    <div id="loadingText"></div>
+  </div>
+
+  <!-- <div id="hamburger">
       <div class="icon">
         <span></span>
         <span></span>
@@ -38,41 +39,36 @@
       </div>
     </nav> -->
 
-    <div id="particles-js"></div>
-    <div class="contents">
-      <div id="title">
-        <h1>2024 FujitaPoject</h1>
-      </div>
-      <nav class="navigationTop">
-        <ul>
-          <li><a href="#">TOP</a></li>
-          <li><a href="works/index.html">WORKS</a></li>
-          <li><a href="about/index.html">ABOUT</a></li>
-          <li><a href="members/members.html">MEMBERS</a></li>
-          <!-- <li><a href="contents/contents.html">CONTENTS</a></li> -->
-          <li>
-            <a
-              href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0"
-              >ACTIVITY LOG</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <div class="logoArea">
-        <img class="slideIn" src="img/ロゴ.png" />
-      </div>
-      <div class="titleArea">
-        <h1>FUJITA PROJECT</h1>
-      </div>
+  <div id="particles-js"></div>
+  <div class="contents">
+    <div id="title">
+      <h1>2024 FujitaPoject</h1>
     </div>
+    <nav class="navigationTop">
+      <ul>
+        <li><a href="#">TOP</a></li>
+        <li><a href="works/index.html">WORKS</a></li>
+        <li><a href="about/index.html">ABOUT</a></li>
+        <li><a href="members/members.html">MEMBERS</a></li>
+        <!-- <li><a href="contents/contents.html">CONTENTS</a></li> -->
+        <li>
+          <a href="https://sites.google.com/senshu-u.jp/2024fujitapj/%E3%83%9B%E3%83%BC%E3%83%A0">ACTIVITY LOG</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="logoArea">
+      <img class="slideIn" src="img/ロゴ.png" />
+    </div>
+    <div class="titleArea">
+      <h1>FUJITA PROJECT</h1>
+    </div>
+  </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.js"
-      integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="scriptFile.js"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+  <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="scriptFile.js"></script>
+</body>
+
 </html>
