--- a/works/index.html
+++ b/works/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" tyep="css" href="../styel.css" />
-    <title>S2024FujitaProject</title>
+    <title class="headtitle">S2024FujitaProject</title>
   </head>
 
   <body>
@@ -52,15 +52,15 @@
                 <p>フィッシング詐欺に騙された・騙されそうになったことはありますか？アンケートを作成したので是非回答してみてください。</p>
               </li>
               <li>
-                <a href="experience/index.html">ワンクリック詐欺体験</a>
+                <a href="https://projectphishing-site.netlify.app">ワンクリック詐欺体験</a>
                 <p>ワンクリック詐欺の体験ができるページです。ワンクリック詐欺の手口を知ることができます。</p>
               </li>
               <li>
-                <a href="quiz/index.html">フィッシング詐欺クイズ</a>
+                <a href="https://fujitaproject-phishingsimulation.netlify.app">フィッシング詐欺クイズ</a>
                 <p>あなたのフィッシング詐欺対策レベルを測定するクイズです。</p>
               </li>
               <li>
-                <a href="mailcheck/index.html">フィッシング詐欺体験コンテンツ</a>
+                <a href="https://fujitaprojectbasetest.netlify.app/">フィッシング詐欺体験コンテンツ</a>
                 <p>このプロジェクトでのコンテンツを基に、フィッシング詐欺コンテンツの体験を基に、簡単なクイズを問いてみてください。</p>
               </li>
             </ol>
